# autoasset

./: .gitignore  Autoasset.afpub  CodeGit.md  DataFrame.json  README.md  TEST.md  app.py  app_midd.py  app_routes.py  app_seting.json  app_setting.py  app_view.py  appx.py  asset.json  asset.json.back  cankao.md  filterN_v3.json  filterN_v3.json_bak  generate_asset.py  generate_wiki.py  glns_test.md  glns_test.py  html  index.html  insx.rego  luck.json  postcall_test.py  pyproject.toml  rego  requirements.txt  tools.ipynb
.github/workflows/: glns.yaml  glns_t.yaml  main.yaml  python-app.yml  wiki.yaml
Codex/: datav.py  gethtml.py  glns.py  glns_v2.py  md.py  note.py  pathliab.py  rego.py  rego_v2.py  rego_v3.py
codetest/: glns_v2.py  rego  rego.py  test_lianhao.py
codex/: BigLottery52.py  datav.py  filters_v3.py  gethtml.py  glns_v2.py  pipsub.py  postcall.py  sq3database.py  tools.py
script/: ip.sh  kill9.sh  lsof.sh
static/: cases.css  casex.css  error.js  handle.css  handle.js  nouislider.css  nouislider.js  obj.css  obj.js  obj_function.js  science.css  science.js
templates/: index.html  index.j2  science.html  test.html
