[tool.poetry]
name = "autoasset"
version = "0.1.0"
description = "auto asset.json"
authors = ["JogfeeingVI <lifelse@outlook.com>"]
license = "GPL3.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yapf = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
