[tool.poetry]
name = "autoasset"
version = "0.1.0"
description = "auto asset.json"
authors = ["JogfeeingVI <lifelse@outlook.com>"]
license = "GPL3.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yapf = "^0.33.0"
aiohttp = "^3.9.1"
aiohttp-session = "^2.12.0"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
