[tool.poetry]
name = "autoasset"
version = "0.1.0"
description = "auto asset.json"
authors = ["JogfeeingVI <lifelse@outlook.com>"]
license = "GPL3.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
aiohttp-session = "^2.12.0"
aiohttp-jinja2 = "^1.6"
jedi = "^0.19.1"
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
